objects/KnowledgeContainer__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Container_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Container Lookup</label>
        <referenceTo>KnowledgeContainer__c</referenceTo>
        <relationshipLabel>Knowledge Containers</relationshipLabel>
        <relationshipName>Knowledge_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>container__c</fullName>
        <label>container</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>containername__c</fullName>
        <label>containername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasChild__c</fullName>
        <label>hasChild</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hiearchyid__c</fullName>
        <label>hiearchyid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>levelof__c</fullName>
        <label>levelof</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Container</label>
    <listViews>
        <fullName>Show_All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>containername__c</columns>
        <columns>container__c</columns>
        <columns>hasChild__c</columns>
        <columns>hiearchyid__c</columns>
        <columns>levelof__c</columns>
        <columns>parent__c</columns>
        <columns>order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>order__c</field>
            <operation>equals</operation>
        </filters>
        <label>Show All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>